--- a/src/i18n/en/confirm-email.json
+++ b/src/i18n/en/confirm-email.json
@@ -1,5 +1,5 @@
 {
   "text1": "Hey!",
   "text2": "You’re almost ready to start enjoying",
-  "text3": "Simply click the big green button below to verify your email address."
+  "text3": "Your verification code"
 }
