Revert "Merge branch 'develop' into fature/#147-API-get-users-who-i-follow-with-pagination"
This reverts commit 5e5738848f40bfc8a5986e9fd097512b7a7ac163, reversing
changes made to 671d948a2d03efda7de3f9d2312cd3997ff06971.

--- a/src/i18n/en/confirm-email.json
+++ b/src/i18n/en/confirm-email.json
@@ -1,5 +1,5 @@
 {
   "text1": "Hey!",
   "text2": "You’re almost ready to start enjoying",
-  "text3": "Your verification code, code it is valid for 15 minutes "
+  "text3": "Your verification code"
 }
